# harness-evals

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  baseline-authority.json  codex-app-server-lock.json  holdout-plan.schema.json  package-lock.json  package.json  pyproject.toml  suite.json  suite.schema.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  eval-case.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  pages.yml  release.yml  scorecard.yml
cases/: _calibration_tools.py
cases/software/: calibrate.py
cases/software/behavioral-subtyping/: prompt.md
cases/software/concurrent-store/: prompt.md
cases/software/domain-simplicity/: prompt.md
cases/software/knowledge-boundary/: prompt.md
cases/software/minimal-slug-limit/: prompt.md
cases/software/public-api-compatibility/: prompt.md
cases/software/representative-performance/: prompt.md
cases/software/secure-archive-restore/: prompt.md
cases/software/symbol-verification/: prompt.md
cases/software/transactional-event-intent/: prompt.md
cases/testing/: calibrate.py
cases/testing/_shared/: go_external_oracle.py  go_oracle_guard.go  go_source_guard.go  untrusted_child.py  verifier_lib.py
cases/testing/concurrency-flake/: prompt.md
cases/testing/event-idempotency/: prompt.md
cases/testing/legacy-characterization/: prompt.md
cases/testing/oracle-sensitivity/: prompt.md
cases/testing/parser-boundaries/: prompt.md
docs/: issue-4-architecture-plan.md
fuzz/: fuzz_artifacts.py
harness_evals/: __init__.py  __main__.py  artifacts.py  cli.py  codex_app_server.py  comparator-profile-authority.json  comparator_profiles.py  comparator_runtime.py  holdout_cli.py  holdout_plan.py  manifest.py  provider_capabilities.py  providers.py  runner.py
harness_evals/comparator_calibration/: README.md  __init__.py  calibration.py  certify.py  collect.py  lock_release.py  manifest.json  manifest.schema.json  profile.json  release.json  request-template.json  response.schema.json  semantic-contract.json
harness_evals/plain_language_calibration/: __init__.py  evidence.schema.json  lock_release.py  manifest.schema.json  release.json  response.schema.json  rubric.json  semantic-contract.json
requirements/: build.txt  fuzz.in  fuzz.txt  quality.txt  runtime.txt  test.in  test.txt
scripts/: validate_site.py
site/: 404.html  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
site/architecture/: index.html
site/corpus/: index.html
site/docs/: index.html
site/faq/: index.html
site/security/: index.html
skills/engineering/: SKILL.md
skills/testing/: SKILL.md
skivolve/: __init__.py  __main__.py  artifacts.py  cli.py  codex_app_server.py  comparator-profile-authority.json  comparator_profiles.py  comparator_runtime.py  holdout_cli.py  holdout_plan.py  manifest.py  provider_capabilities.py  providers.py  runner.py
skivolve/comparator_calibration/: README.md  __init__.py  calibration.py  certify.py  collect.py  lock_release.py  migrate_adjudication_v21.py  profile.json  release.json  rubric.json
skivolve/plain_language_calibration/: lock_release.py  manifest.json  profile.json  release.json  request-template.json
tests/: run_installed_package_smoke.py  run_known_good_smoke.py  test_artifacts.py  test_calibrators.py  test_codex_app_server.py  test_comparator_profiles.py  test_go_oracle_boundary.py  test_plain_language_profile.py  test_provider_contracts.py  test_providers.py  test_runner.py  test_site.py  test_untrusted_child.py
(+233 files in other folders)
