[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-evals"
version = "0.3.0"
description = "Reproducible A/B evaluations of skills and instruction bundles through agent harnesses"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dhiman Seal" },
]
keywords = ["a-b-testing", "agent-evaluation", "agent-harnesses", "evals", "instruction-bundles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["rfc8785==0.1.4"]

[project.optional-dependencies]
test = ["jsonschema==4.25.1", "referencing==0.37.0"]

[project.urls]
Homepage = "https://github.com/Dhi13man/harness-evals"
Repository = "https://github.com/Dhi13man/harness-evals"
Issues = "https://github.com/Dhi13man/harness-evals/issues"
Changelog = "https://github.com/Dhi13man/harness-evals/blob/main/CHANGELOG.md"

[project.scripts]
harness-evals = "harness_evals.cli:main"
harness-evals-prepare-holdout = "harness_evals.holdout_cli:main"

[tool.setuptools.packages.find]
include = ["harness_evals*"]

[tool.setuptools.package-data]
"harness_evals" = ["comparator-profile-authority.json"]
"harness_evals.comparator_calibration" = ["*.json", "README.md", "tests/*.json"]
"harness_evals.plain_language_calibration" = ["*.json", "tests/*.json"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
