[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "skivolve"
version = "0.4.0"
description = "Open-source framework for reproducible A/B evaluation of agent skills and instructions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dhiman Seal" },
]
keywords = ["a-b-testing", "agent-evaluation", "agent-harnesses", "instruction-evaluation", "skill-evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["rfc8785==0.1.4"]

[project.optional-dependencies]
test = ["jsonschema==4.26.0", "referencing==0.37.0"]

[project.urls]
Homepage = "https://dhi13man.github.io/skivolve/"
Documentation = "https://dhi13man.github.io/skivolve/docs/"
Repository = "https://github.com/Dhi13man/skivolve"
Issues = "https://github.com/Dhi13man/skivolve/issues"
Changelog = "https://github.com/Dhi13man/skivolve/blob/main/CHANGELOG.md"

[project.scripts]
skivolve = "skivolve.cli:main"
skivolve-prepare-holdout = "skivolve.holdout_cli:main"

[tool.setuptools.packages.find]
include = ["skivolve*"]

[tool.setuptools.package-data]
"skivolve" = ["comparator-profile-authority.json"]
"skivolve.comparator_calibration" = ["*.json", "README.md", "tests/*.json"]
"skivolve.plain_language_calibration" = ["*.json", "tests/*.json"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
